Fixed alignment issues and changed grid sizes

--- a/style.css
+++ b/style.css
@@ -2,16 +2,29 @@
     --grid-rows:1 ;
     --grid-cols:1 ;
 }
-#container{
+body{
     display: grid;
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
+    justify-content: center
+}
+
+h1{
+    display: flex;
+    justify-content: center;
+}
+#grid-container{
+    display: grid;
+    grid-template-rows: repeat(var(--grid-rows), auto);
+    grid-template-columns: repeat(var(--grid-cols), auto);
+    height: 500px;
+    width: 500px;
 }
 
 .grid-item{
-    padding: 1em;
+    padding: 0.5em;
     border: 1px solid #ddd;
 }
+
+
 
 
 
